Minify JS and CSS libraries

--- a/src/main/webapp/web/index.html
+++ b/src/main/webapp/web/index.html
@@ -8,7 +8,7 @@
     <title>pet-shop</title>
 
     <script data-main="js/app" src="js/require.js"></script>
-    <link rel="stylesheet" href="css/bootstrap.css"/>
+    <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/app.css"/>
 </head>
     <body>
