--- a/src/main/webapp/rest/index.html
+++ b/src/main/webapp/rest/index.html
@@ -73,6 +73,25 @@
 
       window.swaggerUi.load();
 
+      var basicAuthUI =
+              '<div class="input"><input placeholder="Username" id="username" type="text"/></div>' +
+              '<div class="input"><input placeholder="Password" id="password" type="password"/></div>';
+      $('#auth_container').append($(basicAuthUI));
+      $("#input_apiKey").hide();
+
+      $('#username').change(addBasicAuthorization);
+      $('#password').change(addBasicAuthorization);
+
+      function addBasicAuthorization() {
+        var username = $('#username').val();
+        var password = $('#password').val();
+        if (username && username.trim() != "" && password && password.trim() != "") {
+          var basicAuth = new SwaggerClient.PasswordAuthorization('basic', username, password);
+          window.swaggerUi.api.clientAuthorizations.add("basicAuth", basicAuth);
+          console.log("authorization added: username = " + username + ", password = " + password);
+        }
+      }
+
       function log() {
         if ('console' in window) {
           console.log.apply(console, arguments);
